Fixed margin under image, flickering message on mobile device and non-responsive page number

--- a/components/04-molecules/visual-elements/slider/_slider.scss
+++ b/components/04-molecules/visual-elements/slider/_slider.scss
@@ -32,10 +32,9 @@
 
 .page__number__box {
   position: absolute;
-  top: 4%;
-  width: 10%;
-  margin-right: 3%;
-  margin-left: 90%;
+  top: 3%;
+  width: 4%;
+  margin-left: 94%;
 }
 
 .page__number {
